fix remove button text gray on dark mode

--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -1739,6 +1739,7 @@ td>table>tbody>tr>td,
 /* red */
 .btn.danger,
 .cbi-section-remove>.cbi-button,
+.cbi-section-actions .cbi-button-remove,
 .cbi-button-remove,
 .cbi-button-reset,
 .cbi-button-negative,
@@ -1747,7 +1748,7 @@ td>table>tbody>tr>td,
 .cbi-button[onclick="reboot(this)"],
 .cbi-button-neutral[value="Restart"] {
     font-weight: normal;
-    color: #fff;
+    color: #fff !important;
     border: thin solid #f5365c;
     border: thin solid var(--red);
     background-color: #f5365c;
